k8s/loadbalancer/nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: potathon-nginx-np
spec:
  type: NodePort
  ports:
    - name: "http-port"
      protocol: "TCP"
      port: 80
      targetPort: 80
  selector:
    app: potathon-nginx
