k8s/loadbalancer/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: potathon-nginx-lb
spec:
  type: LoadBalancer
  ports:
    - name: "http-port"
      protocol: "TCP"
      port: 80
      targetPort: 80
  selector:
    app: potathon-nginx
